--- a/configs/luci/im.config
+++ b/configs/luci/im.config
@@ -116,6 +116,7 @@ CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_libzstd=y
 CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_luci-app-advancedplus=y
 CONFIG_PACKAGE_luci-app-ddns-go=y
 CONFIG_PACKAGE_luci-app-kucat-config=y
 CONFIG_PACKAGE_luci-app-partexp=y
@@ -136,6 +137,7 @@ CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
