--- a/.github/workflows/im_X86_64.yml
+++ b/.github/workflows/im_X86_64.yml
@@ -17,7 +17,7 @@ on:
   repository_dispatch:
 
 env:
-  OPNAME: 'x86_64im'
+  OPNAME: 'x86_64ImmortalWrt'
   # 改为 ImmortalWrt 源（im 的）
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   # 使用 openwrt-24.10 分支（对应 OpenWrt 24.10，内核 6.6）
