--- a/configs/luci/test.config
+++ b/configs/luci/test.config
@@ -116,6 +116,8 @@ CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_libzstd=y
 CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_luci-app-advancedplus=y
+CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
 CONFIG_PACKAGE_luci-app-ddns-go=y
 CONFIG_PACKAGE_luci-app-kucat-config=y
 CONFIG_PACKAGE_luci-app-partexp=y
