--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,9 +23,7 @@ on:
 
 env:
   OPNAME: 'x86_64im'
-  # 改为 ImmortalWrt 源（im 的）
   REPO_URL: https://github.com/immortalwrt/immortalwrt
-  # 使用 openwrt-24.10 分支（对应 OpenWrt 24.10，内核 6.6）
   REPO_BRANCH: openwrt-24.10
   FEEDS_CONF: feeds.conf.default
   EXTERNAL_FILE: configs/luci/test.config
@@ -64,19 +62,20 @@ jobs:
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo docker image prune -a -f
           df -hT
-              # Install Go if not installed
+          
+          # Install Go if not installed
           if ! command -v go &>/dev/null; then
-          echo "Go not found, installing..."
+            echo "Go not found, installing..."
             sudo apt-get -qq install golang-go
           else
             echo "Go is already installed"
           fi
+          
           # Check Go version
           go version
+
       - name: 检查磁盘空间
         run: df -hT
-
-
 
       # 3. 克隆 OpenWrt 源码
       - name: 克隆 OpenWrt 源码
@@ -84,6 +83,7 @@ jobs:
         run: |
           git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
           ln -sf $WORKDIR/openwrt $GITHUB_WORKSPACE/openwrt
+
       # 4. 使用 cache 加速编译
       - name: 缓存编译
         uses: stupidloud/cachewrtbuild@main
@@ -95,72 +95,284 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
-
-
-      # 8. 自动注入 LAN IP + PPPoE 信息
+      # 5. 自动注入 LAN IP + PPPoE 信息
       - name: 自动注入 LAN IP 和 PPPoE
         run: |
           mkdir -p $WORKDIR/openwrt/files/etc/uci-defaults
-          printf '#!/bin/sh\n' > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf '# 自动注入 LAN IP + PPPoE 信息\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'sed -i "s/192\.168\.[0-9]\{1,3\}\.[0-9]\{1,3\}/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.proto="pppoe"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci commit network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'exit 0\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          cat > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network << 'EOF'
+#!/bin/sh
+# 自动注入 LAN IP + PPPoE 信息
+sed -i "s/192\.168\.[0-9]\{1,3\}\.[0-9]\{1,3\}/${{ github.event.inputs.lan_ip }}/g" /etc/config/network
+uci set network.wan.proto="pppoe"
+uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"
+uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"
+uci commit network
+exit 0
+EOF
 
-
-      # 4. 启动 SSH 连接 (tmate) 如果用户选择启用
+      # 6. 启动 SSH 连接 (tmate) 如果用户选择启用
       - name: 启动 SSH 连接
-        if: ${{ inputs.ssh == true }}
+        if: ${{ github.event.inputs.ssh == true }}
         uses: mxschmitt/action-tmate@v3.13
         continue-on-error: true
 
+      # 7. 执行 OpenWrt 编译脚本
+      - name: 执行 OpenWrt 编译脚本
+        working-directory: ${{ env.WORKDIR }}/openwrt
+        run: |
+          # 创建自定义包目录
+          echo "步骤1: 创建自定义包目录..."
+          CUSTOM_DIR="package/custom"
+          mkdir -p "$CUSTOM_DIR"
+          
+          # 配置官方 feeds（仅官方）
+          cat > feeds.conf.default << 'EOF'
+# ImmortalWrt 官方 feeds
+src-git packages https://github.com/immortalwrt/packages.git;master
+src-git luci https://github.com/immortalwrt/luci.git;master
+src-git routing https://github.com/immortalwrt/routing.git;master
+EOF
+          
+          echo "更新官方 feeds..."
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
+          
+          # 下载自定义包到统一目录
+          echo "步骤2: 下载自定义包到统一目录..."
+          
+          clone_to_custom() {
+              local url="$1"
+              local name="$2"
+              local target_dir="$CUSTOM_DIR/$name"
+              
+              if [ ! -d "$target_dir" ]; then
+                  echo "下载: $name"
+                  if git clone --depth 1 "$url" "$target_dir" 2>/dev/null; then
+                      echo "  ✓ 下载成功"
+                      return 0
+                  else
+                      echo "  ✗ 下载失败"
+                      return 1
+                  fi
+              else
+                  echo "已存在: $name"
+                  return 0
+              fi
+          }
+          
+          echo "开始下载自定义包..."
+          # iStore
+          clone_to_custom "https://github.com/linkease/istore.git" "istore"
+          # 其他常用插件
+          clone_to_custom "https://github.com/sirpdboy/luci-app-advancedplus.git" "luci-app-advancedplus"
+          clone_to_custom "https://github.com/sirpdboy/luci-theme-kucat.git" "luci-theme-kucat"
+          clone_to_custom "https://github.com/sirpdboy/luci-app-kucat-config.git" "luci-app-kucat-config"
+          clone_to_custom "https://github.com/sirpdboy/luci-app-adguardhome.git" "luci-app-adguardhome"
+          # Kenzo 主仓库
+          clone_to_custom "https://github.com/kenzok8/openwrt-packages.git" "kenzo"
+          # Small 仓库（包含一些依赖包）
+          clone_to_custom "https://github.com/kenzok8/small.git" "small"
+          
+          ./scripts/feeds update -a 
+          rm -rf feeds/luci/applications/luci-app-mosdns
+          rm -rf feeds/packages/net/{alist,adguardhome,mosdns,xray*,v2ray*,sing*,smartdns}
+          rm -rf feeds/packages/utils/v2dat
+          
+          ./scripts/feeds install -a
+          
+          # 删除旧 golang 目录（即使不存在也不报错）
+          rm -rf feeds/packages/lang/golang
+          
+          # 克隆最新 Kenzo golang
+          if git clone https://github.com/kenzok8/golang -b 1.25 feeds/packages/lang/golang; then
+              echo "✅ golang 克隆成功"
+              make package/golang/host/compile
+          else
+              echo "⚠️ golang 克隆失败"
+              exit 1
+          fi
+          
+          delete_dir() {
+              local dir="$1"
+              if [ -d "$dir" ]; then
+                  rm -rf "$dir"
+                  if [ $? -eq 0 ]; then
+                      echo "✅ 已删除: $dir"
+                  else
+                      echo "⚠️ 删除失败: $dir"
+                  fi
+              else
+                  echo "⚠️ 目录不存在，跳过: $dir"
+              fi
+          }
+          
+          # 删除指定目录
+          delete_dir "package/feeds/packages/onionshare-cli"
+          delete_dir "package/feeds/packages/python-zope-event"
+          delete_dir "package/feeds/packages/python-zope-interface"
+          delete_dir "package/custom/kenzo/adguardhome"
+          
+          # 生成配置
+          echo "步骤3: 生成配置..."
+          make defconfig
+          
+          # 添加自定义配置（Kenzo仓库中仅启用quickstart）
+          echo "步骤4: 添加自定义配置..."
+          cat >> .config << 'EOF'
+# ========== 基础配置 ==========
+CONFIG_TARGET_x86=y
+CONFIG_TARGET_x86_64=y
+CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-      # 12. 编译固件
+# ========== 核心依赖配置 ==========
+CONFIG_ALL_KMODS=y
+CONFIG_ALL_NONSHARED=y
+CONFIG_SELECT_ALL_KMODS=y
+CONFIG_BUILD_NLS=y
+CONFIG_BUILD_PATENTED=y
+
+# ========== 文件系统 ==========
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+CONFIG_ISO_IMAGES=y
+CONFIG_VMDK_IMAGES=y
+CONFIG_PACKAGE_kmod-fs-cifs=y
+
+# ========== 核心工具 ==========
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_coreutils=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_tar=y
+CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_vim=y
+
+# ========== 网络工具 ==========
+CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_iptables-nft=y
+CONFIG_PACKAGE_ip6tables-nft=y
+CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_socat=y
+
+# ========== 容器支持 ==========
+CONFIG_PACKAGE_docker=y
+CONFIG_PACKAGE_dockerd=y
+CONFIG_PACKAGE_containerd=y
+CONFIG_PACKAGE_runc=y
+
+# ========== 自定义包配置 ==========
+# Passwall
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
+CONFIG_PACKAGE_luci-app-webadmin=y
+
+# iStore
+CONFIG_PACKAGE_luci-app-store=y
+
+# SmartDNS
+CONFIG_PACKAGE_smartdns=y
+CONFIG_PACKAGE_luci-app-smartdns=y
+
+# ========== Kenzo 包配置（仅启用quickstart） ==========
+CONFIG_PACKAGE_luci-app-quickstart=y
+
+# ========== 其他独立应用 ==========
+CONFIG_PACKAGE_luci-app-advancedplus=y
+CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_tailscale=y
+CONFIG_PACKAGE_luci-app-ddns-go=y
+CONFIG_PACKAGE_luci-app-socat=y
+
+# ========== 其他主题 ==========
+CONFIG_PACKAGE_luci-theme-kucat=y
+CONFIG_PACKAGE_luci-theme-neobird=y
+CONFIG_PACKAGE_luci-app-kucat-config=y
+
+# ========== 语言包 ==========
+CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-store-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
+
+# ========== 基础库 ==========
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_libsqlite3=y
+CONFIG_PACKAGE_libjson-c=y
+CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_libpthread=y
+CONFIG_PACKAGE_librt=y
+EOF
+          
+          # 处理配置
+          echo "步骤5: 处理配置..."
+          yes "" | make oldconfig
+          
+          # 下载源码
+          echo "步骤6: 下载源码..."
+          echo "这可能需要一些时间，请耐心等待..."
+          make download -j$(nproc) || {
+              echo "多线程下载失败，尝试单线程..."
+              make download -j1 V=s
+          }
+
+      # 8. 编译固件
       - name: 编译 OpenWrt 固件
         id: compile
+        working-directory: ${{ env.WORKDIR }}/openwrt
         run: |
-          cd $WORKDIR/openwrt
           echo "$(nproc) thread compile"
           make -j$(nproc) V=s || make -j4 V=s
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_x86_64Lite" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
-      # 13. 清理编译缓存
+
+      # 9. 清理编译缓存
       - name: 清理编译缓存
         if: steps.compile.outputs.status == 'success'
+        working-directory: ${{ env.WORKDIR }}/openwrt
         run: |
-          cd $WORKDIR/openwrt
           rm -rf build_dir staging_dir tmp bin/packages .ccache
           df -hT
-      # 14. 上传 bin 目录（可选）
+
+      # 10. 上传 bin 目录（可选）
       - name: 上传 bin 目录
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v4
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
         with:
           name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-          path: $WORKDIR/openwrt/bin
+          path: ${{ env.WORKDIR }}/openwrt/bin
 
-      # 15. 整理固件目录
+      # 11. 整理固件目录
       - name: 整理固件目录
         id: organize
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
+        working-directory: ${{ env.WORKDIR }}/openwrt
         run: |
-          cd $WORKDIR/openwrt/bin/targets/*/*
+          cd bin/targets/*/*
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "status=success" >> $GITHUB_OUTPUT
-      # 16. 上传固件到 Artifact
+
+      # 12. 上传固件到 Artifact
       - name: 上传固件到 Artifact
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v4
         if: steps.organize.outputs.status == 'success'
         with:
           name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
           path: ${{ env.FIRMWARE }}
 
-      # 17. 生成 Release tag
+      # 13. 生成 Release tag
       - name: 生成 Release tag
         id: tag
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true'
@@ -168,11 +380,13 @@ jobs:
           echo "release_tag=$(date +"%Y.%m.%d-%H%M%S")" >> $GITHUB_OUTPUT
           touch release.txt
           echo "status=success" >> $GITHUB_OUTPUT
-      # 18. Release 内容生成
+
+      # 14. Release 内容生成
       - name: 生成 Release 内容
         run: |
           echo "![](https://img.shields.io/github/downloads/${{ github.repository }}/${{ steps.tag.outputs.release_tag }}/total?style=flat-square)" >> release.txt
-      # 19. 上传固件到 Release
+
+      # 15. 上传固件到 Release
       - name: 上传固件到 Release
         uses: softprops/action-gh-release@v1
         if: steps.tag.outputs.status == 'success'
